# sparkling-owl-spin

./: .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  API‑endpoints.txt  BACKEND_IMPLEMENTATION_COMPLETE.md  BIBLIOTEKSANALYS_RAPPORT.md  Backend - Översikt.txt  CHANGELOG.md  CLEANUP_PLAN.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETE_DOCUMENTATION_CONSOLIDATED.md  COMPLETE_IMPLEMENTATION_VERIFICATION.md  COMPLETE_PROJECT_SUMMARY.md  CONFIGURATION_CLEANUP_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_CONSOLIDATION_COMPLETE.md  Definition‑of‑Done” (DoD).txt  ENHANCED_VALIDATION_REPORT.json  EXECUTIVE_SUMMARY.md  FINAL_ACHIEVEMENT_STATUS.json  FINAL_CONSOLIDATION_SUMMARY.md  FINAL_DEVELOPMENT_SUMMARY.json  FINAL_IMPLEMENTATION_COMPLETE_V4.md  FINAL_IMPLEMENTATION_COMPLETION.json  FINAL_IMPLEMENTATION_COMPLETION.py  FINAL_MARKET_DOMINATION_COMPLETE.md  FINAL_MISSION_VALIDATION.py  FINAL_PYRAMID_ACHIEVEMENT_REPORT.md  FINAL_STATUS_REPORT.py  FINAL_SYSTEM_ASSESSMENT.json  FINAL_SYSTEM_VALIDATION_REPORT_20250824_164330.json  FINAL_SYSTEM_VALIDATION_REPORT_20250824_164355.json  FINAL_SYSTEM_VALIDATION_REPORT_20250824_164439.json  FINAL_VALIDATION_REPORT.json  FINAL_VALIDATION_REPORT_20250824_164330.txt  FINAL_VALIDATION_REPORT_20250824_164355.txt  (+207 more)
.github/: CODEOWNERS  CONSOLIDATION_REPORT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.next/: prerender-manifest.json  trace
INSPIRATION_ATT_IMPLEMENTERA_I_PROJEKTET_GENOM_ATT_KOPIERA_FRÅN_DENNA_MAPP/: bytbil_sitemap_extractor.py  merinfo_crawler.py
api/: complete-integration.py  crawler.py  health.py  revolutionary-crawler.py  vercel-optimized.py
api_clients/: README.md
app/: globals.css  layout.tsx  page.tsx
backend/: Dockerfile  main.py  simple_main.py
clients/: postman_collection.json
config/: alerts_thresholds.yml  anti_bot.yml  api.yml  app_config.yml  auth.yml  captcha.yml  config.yaml  crawl-policies.yml  default.yaml  docker-compose-complete-v4.yml  docker-compose.backend.yml  docker-compose.revolutionary.yml  docker-compose.sos.yml  docker-compose.yml  domain_policies.yml  export_targets.yml  feature_flags.yml  logging.yml  performance-defaults.yml  pnpm-lock.yaml  proxies.yml  rate_limits.yml  retention_policy.yml  revolutionary-config-v4.yml  roles.yml  services.yaml  ultimate_config.json  vendors.yaml
core/: __init__.py  orchestrator.py  security_controller.py
docker/: Dockerfile  Dockerfile.worker  docker-compose.synthetic.yml  docker-compose.yml  entrypoint.sh
docs/: anti_bot_strategy.md  api_documentation.md  architecture.md  backend_readme.md  changelog.md  database_schema.md  deployment_guide.md  developer_guide.md  dsl_reference.md  graphql.graphql  graphql_guide.md  implementationsframsteg_slutrapport.md  lovable_prompts.md  observability.md  openapi.yaml  postman_collection.json  projekt_analys_rapport.md  quick_start.md  system_design_decisions.md  template_development.md  usage_guide.md  user_interface_design.md
engines/: __init__.py
examples/: README.md  crawl_example.md  demo_revolutionary_v4.py  demo_sparkling_owl_spin.py
frontend/: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TREE.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.ts  vite.config.ts
frontend-nextjs/: .eslintrc.json  next.config.js  next.config.simple.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ConnectionStatus.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/hooks/: useApi.ts
frontend/src/integrations/supabase/: client.ts  types.ts
frontend/src/pages/: APIExplorer.tsx  AuditLog.tsx  BrowserPanel.tsx  CrawlPlanStudio.tsx  DQPanel.tsx  Dashboard.tsx  DataWarehouse.tsx  ErasureAdmin.tsx  Exports.tsx  HelpCenter.tsx  JobControl.tsx  JobDetailsConsole.tsx  JobLauncher.tsx  OnboardingWizard.tsx  Policies.tsx  PrivacyCenter.tsx  ProjectManagement.tsx  ProxyMonitor.tsx  Scheduler.tsx  Settings.tsx  SourcesProjects.tsx  TemplateBuilder.tsx  TemplateWizard.tsx
frontend/src/styles/: index.css
frontend/supabase/: config.toml
layers/: __init__.py  analysis_layer.py  bypass_layer.py  execution_layer.py  orchestration_layer.py
legal/: README.md  compliance_framework.md  privacy_policy.md  terms_of_service.md
lovable/: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TREE.md  VERSION  __init__.py  api.py  app.py  auth.py  changelog.md  components_spec.md  deps.py  exporters.py  flows.md  graphql.py  index.md  logging.py  main.py  manager.py  models.py  mypy.ini  package.json  plugins.py  privacy_center.py  prompt.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  ruff.toml  settings.py  (+4 more)
monitoring/: docker-compose.obsv.yml
notebooks/: project_structure_analysis.ipynb
processing/: __init__.py
rapporter_beskrivningar_planering/: # Project Tree (Canonical).txt  1) Målbild & sammanslagningsprincip.txt  AI ATT IMPLEMENTERA.txt  ATT IMPORTORA OCH TESTA FRÅN GITHUB.txt  Fullständig Kodanalys av projektet.txt  Föregående chat.txt  KOMPLETT DOCKER-SETUP ÄR KLAR!.txt  Projektbeskrivning.txt  SAMTLIGA FUNKTIONER ATT IMPLEMENTERA.txt  frontend överikt.txt  Översikt Arkitektur & Filstruktur.txt  Översikt för alla sidor och funktioner.txt
reports/: deep_analysis_ProxyBroker_20250824_171435.json  deep_analysis_ProxyBroker_20250824_171435.txt  github_comprehensive_analysis_20250824_175347.json
revolutionary_scraper/: content_extraction_system.py  system_configuration.py
scripts/: backup.sh  detailed_structure_comparison.py  init_db.py  production_readiness_analysis.py  restore_check.py  run_analysis.py  run_crawler.py  run_scraper.py  start_scheduler.py
src/: backend_main.py  production_vendor_manager.py  settings.py  vendor_manager.py  webapp_main.py
supabase/: DATABASE_IMPLEMENTATION_COMPLETE.md
(+1056 files in other folders)
